compiler/toc_analysis/src/typeck/snapshots/toc_analysis__typeck__test__logical_op_wrong_type_or.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
expression: "\n    var b : boolean\n    var r : real\n    var i : int\n    var n : nat\n    var _bi := b or i\n    var _bn := b or n\n    var _ib := i or b\n    var _nb := n or b\n    var _ri := r or i\n    var _rn := r or n\n    var _ir := i or r\n    var _nr := n or r\n"

---
"b"@(FileId(1), 9..10) [Declared]: ref_mut boolean
"r"@(FileId(1), 29..30) [Declared]: ref_mut real
"i"@(FileId(1), 46..47) [Declared]: ref_mut int
"n"@(FileId(1), 62..63) [Declared]: ref_mut nat
"_bi"@(FileId(1), 78..81) [Declared]: ref_mut <error>
"_bn"@(FileId(1), 100..103) [Declared]: ref_mut <error>
"_ib"@(FileId(1), 122..125) [Declared]: ref_mut <error>
"_nb"@(FileId(1), 144..147) [Declared]: ref_mut <error>
"_ri"@(FileId(1), 166..169) [Declared]: ref_mut <error>
"_rn"@(FileId(1), 188..191) [Declared]: ref_mut <error>
"_ir"@(FileId(1), 210..213) [Declared]: ref_mut <error>
"_nr"@(FileId(1), 232..235) [Declared]: ref_mut <error>
"<root>"@(dummy) [Declared]: <error>

error in file FileId(1) at 87..89: incompatible types for `or`
| info: operands must both be integers or booleans
error in file FileId(1) at 109..111: incompatible types for `or`
| info: operands must both be integers or booleans
error in file FileId(1) at 131..133: incompatible types for `or`
| info: operands must both be integers or booleans
error in file FileId(1) at 153..155: incompatible types for `or`
| info: operands must both be integers or booleans
error in file FileId(1) at 175..177: incompatible types for `or`
| info: operands must both be integers or booleans
error in file FileId(1) at 197..199: incompatible types for `or`
| info: operands must both be integers or booleans
error in file FileId(1) at 219..221: incompatible types for `or`
| info: operands must both be integers or booleans
error in file FileId(1) at 241..243: incompatible types for `or`
| info: operands must both be integers or booleans
