compiler/toc_analysis/src/typeck/snapshots/toc_analysis__typeck__test__number_op_identity.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
expression: "\n    var r : real\n    var i : int\n    var n : nat\n    var _r := + r\n    var _i := + i\n    var _n := + n\n    "

---
ty_nodes:
    Idx::<Type>(0) TyRef(Real(Real))
    Idx::<Type>(1) TyRef(Int(Int))
    Idx::<Type>(2) TyRef(Nat(Nat))
def_kinds:
    DefId(0) Var(TyRef(Real(Real)))
    DefId(1) Var(TyRef(Int(Int)))
    DefId(2) Var(TyRef(Nat(Nat)))
    DefId(3) Var(TyRef(Real(Real)))
    DefId(4) Var(TyRef(Int(Int)))
    DefId(5) Var(TyRef(Nat(Nat)))
