compiler/toc_analysis/src/typeck/snapshots/toc_analysis__typeck__test__peel_ref_in_inferred_ty.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
assertion_line: 41
expression: "var a : int var k := a"

---
"a"@(FileId(1), 4..5) [Declared]: int
"k"@(FileId(1), 16..17) [Declared]: int
"<root>"@(dummy) [Declared]: <error>

